--- a/middleware/index.html
+++ b/middleware/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Walmart Test</title>
+    <title>Eddie Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 </head>
@@ -10,20 +10,20 @@
         <div class="container">
             <ul class="nav navbar-nav">
                 <li>
-                    <a style="color: white" href="/api-docs">Walmart Test API DOCS</a>
+                    <a style="color: white" href="/api-docs">Eddie Test API DOCS</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="jumbotron"  style="padding:40px;">
-        <h1>Walmart API  TEST SERVER DASHBOARD</h1>
+        <h1>Eddie API  TEST SERVER DASHBOARD</h1>
         <br>
         <br>
         <br>
         <br>
         <br>
         <button class="btn btn-default btn-lg">
-            <a  href="/api-docs">Walmart API DOCS</a>
+            <a  href="/api-docs">Eddie API DOCS</a>
         </button>
     </div>
 </div>
